--- a/Views/Shared/_GlobalStyles.cshtml
+++ b/Views/Shared/_GlobalStyles.cshtml
@@ -2,22 +2,5 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-<!-- CSS modules cơ bản -->
-<link rel="stylesheet" href="~/css/modules/variables.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/modules/base.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/modules/layout.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/modules/components.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/modules/manga.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/modules/navbar.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/modules/sidebar.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/modules/utilities.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/modules/responsive.css" asp-append-version="true" />
-
-<!-- CSS của các trang (đã loại bỏ import từ modules, chỉ chứa style đặc thù) -->
-<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/manga-details.css" asp-append-version="true" />
-<link rel="stylesheet" href="~/css/chapter.css" asp-append-version="true" />
-
-<!-- CSS styles mặc định của ASP.NET Core -->
-<link rel="stylesheet" href="~/manga_reader_web.styles.css" asp-append-version="true" /> 
+<!-- CSS chính của ứng dụng (đã tổng hợp tất cả các module và styles) -->
+<link rel="stylesheet" href="~/css/main.css" asp-append-version="true" />
